# gc

./: CMakeLists.txt  Doxyfile  README.md
Doc/: ChangeLog.txt  License.GPL.doxy  License.LGPL.doxy
Examples/Matlab/: GcMatlab.h  GcMatlabTools.h
Examples/Matlab/ChanVese/: GcChanVese.cpp  GcChanVeseLab.cpp  GcChanVeseTp.cpp  gc_chan_vese_lab.m  gc_chan_vese_lab_two_stage.m  gc_chan_vese_tp.m  gc_chan_vese_tp_two_stage.m  gc_chan_vese_two_stage.m
Examples/Matlab/MumfordShah/: GcMumfordShah.cpp  gc_mumford_shah.m
Examples/Matlab/RoussonDeriche/: GcRoussonDeriche.cpp
Examples/Matlab/Tools/: GcDistTransform.cpp  gc_normalize_image.m  gc_weighted_kmeans.m
Gc/Energy/: Neighbourhood.h
Gc/Energy/Potential/Metric/: RiemannianDanek.cpp  RiemannianDanek.h
Gc/Flow/Grid/: DanekLabels.cpp  DanekLabels.h
Gc/Math/Algebra/: Vector.h
Gc/Math/Geometry/: Voronoi.cpp
Gc/System/Algo/Sort/: Heap.h
